2007-11-30  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-changes-queue.[ch]:
	Convert changes queue to only use GFile, not uris.
	Kill all _by_uri versions
	
        * libnautilus-private/nautilus-directory-notify.h:
        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-link.c:
        * libnautilus-private/nautilus-monitor.c:
        * src/file-manager/fm-directory-view.c:
	Update for above changes

2007-11-30  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-changes-queue.[ch]:
	More uri -> gfile API changes
	
        * libnautilus-private/nautilus-file-operations.[ch]:
	Add move operation
	
        * src/file-manager/fm-directory-view.c:
	Use move operation

2007-11-29  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-changes-queue.[ch]:
        * libnautilus-private/nautilus-icon-dnd.c:
	Change position setting api to accept GFile instead of
	uri
	
        * libnautilus-private/nautilus-file-operations.c:
	Set positions and copy metadata.

2007-11-29  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-changes-queue.[ch]:
	Add some GFile version and rename the old to _by_uri
	
        * libnautilus-private/nautilus-file-operations.c:
	Emit change events
	
        * libnautilus-private/nautilus-file-operations-progress.c:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-icon-dnd.c:
        * libnautilus-private/nautilus-metafile.c:
        * libnautilus-private/nautilus-monitor.c:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-icon-view.c:
	Update to latest APIs

2007-11-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Better status message when copying one folder
	
        * libnautilus-private/nautilus-progress-info.c:
	Correct tooltip message for status icon
