@@ -99,14 +99,14 @@ void nautilus_file_operations_copy (GList *files,
 				    GArray *relative_item_points,
 				    GFile *target_dir,
 				    GtkWindow *parent_window,
-				    void (*done_callback) (GHashTable *debuting_uris, gpointer data),
+				    NautilusCopyCallback  done_callback,
 				    gpointer done_callback_data);
 
 void nautilus_file_operations_move (GList *files,
 				    GArray *relative_item_points,
 				    GFile *target_dir,
 				    GtkWindow *parent_window,
-				    void (*done_callback) (GHashTable *debuting_files, gpointer data),
+				    NautilusCopyCallback  done_callback,
 				    gpointer done_callback_data);
 
 #endif /* NAUTILUS_FILE_OPERATIONS_H */
